testsuite/tests/roles/should_fail/Roles12.hs
module Roles12 where

import {-# SOURCE #-} Roles12

data T a
